--- a/style.css
+++ b/style.css
@@ -92,8 +92,6 @@ body {
 #dropdown {
     position: relative;
     display: inline-block;
-    /* box-sizing: border-box; */
-    /* border: 1px solid lightsalmon; */
 }
 
 #dropdown-list {
@@ -103,18 +101,15 @@ body {
     top: 142px;
     left: 20%;
     padding: 8px 4px;
-    /* width: 200px; */
-    min-width: 170px; 
-    height:150px;
+    min-width: 170px;
+    height: 150px;
     background-color: #FFFFFF;
-    /* visibility: hidden; */
 
 }
 
-#dropdown:hover #dropdown-list{
+#dropdown:hover #dropdown-list {
     display: block;
-    /* color: green; */
-    /* background-color: blue; */
+
 }
 
 #nav-bar a,
@@ -140,18 +135,10 @@ body {
 
 
 #nav-bar>a:hover,
-#nav-bar #dropdown:hover .dropdown-nav{
+#nav-bar #dropdown:hover .dropdown-nav {
     color: #E47311;
-    /* transition-duration: 2s; */
 }
 
-/* Come -Back LATER */
-/* #nav-bar a::before,#nav-bar #dropdown::before,#nav-bar a::after,#nav-bar #dropdown::after{
-    content: "";
-    height:0;
-    transition-delay: height 1s;
-    transition-timing-function: ease-in;
-} */
 
 #nav-bar>a:hover::before,
 #nav-bar #dropdown:hover::before,
@@ -178,7 +165,6 @@ body {
 
 
 /* Slogon Section */
-
 #slogon-section {
     position: absolute;
     top: 32%;
@@ -187,7 +173,6 @@ body {
 
 #slogon-section #top-title {
     color: #FFFFFF;
-    /* color: red; */
     font-size: 4.6875rem;
     font-weight: 600;
 }
@@ -207,7 +192,6 @@ body {
 }
 
 /* Social-Media */
-
 #social-media-wrapper {
     display: flex;
     flex-direction: column;
@@ -236,7 +220,6 @@ body {
 
 
 /* Features Wrapper */
-
 #features-wrapper {
     display: flex;
     background-color: #ED6D35;
@@ -279,7 +262,6 @@ body {
 }
 
 /* Section Button for all the buttons containing text and on hover border bottom */
-
 .section-button {
     color: #919197;
     font-weight: 600;
@@ -287,6 +269,7 @@ body {
     text-decoration: none;
     display: inline-block;
     height: 30px;
+    width: fit-content;
     box-sizing: border-box;
     letter-spacing: 1px;
 }
@@ -309,9 +292,6 @@ body {
     border-color: #FFFFFF;
 
 }
-
-
-
 
 /* Section-2 Services */
 #service-title {
@@ -392,7 +372,6 @@ body {
 
 
 /* About */
-
 #about {
     display: flex;
     box-sizing: border-box;
@@ -507,33 +486,73 @@ body {
 }
 
 .project-list {
+    position: relative;
     width: 31.4%;
-    padding: 16px 8px 5px 16px;
+    margin: 16px 8px 5px 16px;
     cursor: pointer;
 }
 
-/* .project-list:hover {
-    color: #000000;
-    opacity: 0.4;
-} */
+.overlay-image{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3); transition: .2s;
+    box-sizing: border-box;
+    padding-left: 20px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-/* .project-list {
-    background-color: rgba(0, 0, 0, 0.1); transition: .2s;
-    opacity: 0.4;
-    }
 
-.project-list:hover{
-    opacity: 1;
-}     */
 
 .project-list img {
+    z-index: 10;
     width: 100%;
+    opacity: 1;
+    display: block;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+
+.hover-text {
+    transition: 0.1s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+}
+
+
+.project-list:hover .overlay-image{
+    opacity: 1;
+}
+
+.project-list:hover .hover-text {
+    text-align: center;
+    opacity: 1;
+}
+
+.text-content {
+    background-image: linear-gradient(59deg, #ff6361, #e47312);
+    color: #ffffff;
+    font-size: 16px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    box-sizing: border-box;
+    padding: 16px;
+    padding-top: 28px;
 }
 
 
 
 /* Orange Section */
-
 #orange-section {
     display: flex;
     flex-direction: column;
@@ -573,7 +592,6 @@ body {
 
 /* Team */
 #team {
-    /* position: relative; */
     margin-top: 80px;
     padding-bottom: 100px;
 }
@@ -888,7 +906,6 @@ body {
     background-image: linear-gradient(to bottom right, #E57216, #FE645F);
     padding: 30px;
     padding-top: 60px;
-    /* height: 40%; */
 }
 
 
@@ -904,7 +921,7 @@ body {
     height: 55%;
     cursor: pointer;
     background-image: linear-gradient(to bottom right, #E47314, #EF6D3A);
-    
+
 }
 
 .image-card img {
@@ -938,13 +955,21 @@ body {
     align-items: center;
     margin-top: 100px;
     width: 100%;
-    height: 200px;
+    height: 220px;
     color: #FFFFFF;
     background-image: linear-gradient(to right, #E67218, #FE645D);
 }
 
-#companies-logo h1 {
-    letter-spacing: 2px;
+/* Testing-logo image */
+
+#companies-logo img{
+    width: 120px;
+}
+
+#companies-logo p{
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.9px;
 }
 
 footer {
@@ -999,27 +1024,14 @@ footer .section-button:hover {
     align-items: baseline;
 }
 
-/* .info-wrapper .horizontal-line {
-    position: absolute;
-    display: inline-block;
-    top: 30%;
-    left: 30%;
-    width: 50%;
-    border: 0.5px solid #ff6361;
-} */
-
-.info-title h1::after{
+.info-title h1::after {
     content: " ";
-    /* display:inline-flex; */
-    /* flex-direction: row; */
-    /* align-items: flex-start; */
     justify-content: center;
     position: absolute;
     top: 30%;
-    left:65% ;
-    /* height: 2px; */
+    left: 65%;
     width: 80%;
-    border-top: 2px solid #a93c4a;
+    border-top: 2px solid #c92d42;
 }
 
 
@@ -1066,15 +1078,20 @@ footer .section-button:hover {
 
 /* RESPONSIVE FOR MOBILE DEVICES */
 
-
-
-@media(max-width:480px) {
+@media(max-width:479px) {
 
 
     body {
         margin: 0;
         font-size: 8px;
-        /* background-color: yellow; */
+    }
+
+
+    /* Section-button */
+
+    .section-button{
+        height: 25px;
+        font-size: 12px;
     }
 
     /* banner Section */
@@ -1086,7 +1103,7 @@ footer .section-button:hover {
         left: 0;
     }
 
-    #nav-bar::after{
+    #nav-bar::after {
         content: "";
         margin-right: 8%;
         box-sizing: border-box;
@@ -1097,15 +1114,16 @@ footer .section-button:hover {
 
     }
 
-    #nav-bar a, #nav-bar #dropdown, #nav-bar #popup-button-1,#nav-bar #dropdown-list {
+    #nav-bar a,
+    #nav-bar #dropdown,
+    #nav-bar #popup-button-1,
+    #nav-bar #dropdown-list {
         display: none;
     }
 
-    #nav-bar img{
-        /* height: 50px; */
+    #nav-bar img {
         padding: 20px;
-        /* padding-bottom: 20px;
-        padding-left: 20px; */
+        padding-left: 20px;
     }
 
     #banner {
@@ -1116,21 +1134,21 @@ footer .section-button:hover {
 
     .nuuk-logo {
         height: 20px;
-        /* box-sizing: border-box; */
         left: 0;
         top: 0;
     }
 
-    #social-media-wrapper{
+    #social-media-wrapper {
         top: 52%;
         bottom: 0;
         padding: 0 4px;
     }
 
-    #sologon-section{
+    #sologon-section {
         line-height: normal;
     }
-    #slogon-section #top-title{
+
+    #slogon-section #top-title {
         font-size: 36px;
         width: 80%;
         line-height: 1;
@@ -1145,12 +1163,12 @@ footer .section-button:hover {
         margin-top: 10px;
     }
 
-    #features-wrapper{
+    #features-wrapper {
         display: none;
     }
 
 
-    #popup-button-2{
+    #popup-button-2 {
         padding: 14px 10px;
         width: 150px;
         font-weight: 500;
@@ -1158,10 +1176,10 @@ footer .section-button:hover {
     }
 
     /* SERVICES */
-
-    #services{
+    #services {
         padding-top: 50px;
     }
+
     .section-background-title {
         display: none;
     }
@@ -1173,68 +1191,78 @@ footer .section-button:hover {
         font-size: 25px;
     }
 
-    #services .section-button{
+    #services .section-button {
         font-size: 12px;
     }
 
+    #projects-title{
+        margin-bottom: 10px;
+    }
+
+    #projects-title .section-button{
+        display: inline-block;
+        font-size: 12px;
+        /* padding-bottom: 0px; */
+        height: 25px;
+        width: fit-content;
+        /* width: ; */
+    }
 
 
 
     /* Our Specialization */
-
-#service-item{
-    flex-direction: column;
-    /* margin: 30px 0px 0px 30px; */
-    width: 90%;
-    padding-right: 0px;
-    /* background-color: yellowgreen; */
-    line-height: normal;
-}
-
-    #service-item .item-wrapper{
+    #service-item {
+        flex-direction: column;
         width: 90%;
+        padding-right: 0px;
+        line-height: normal;
+        padding-left: 15px;
     }
 
-    #service-title{
+    #service-item .item-wrapper {
+        width: 90%;
+        margin-bottom: 25px;
+    }
+
+    #service-title {
         flex-direction: column;
         padding: 0px 0px 0px 30px;
 
         align-items: flex-start;
     }
 
-    .item-wrapper h2{
+    .item-wrapper h2 {
         font-size: 16px;
         font-weight: 600;
         letter-spacing: 0.8px;
     }
-    
 
-    .item-wrapper .paragraph-content{
+
+    .item-wrapper .paragraph-content {
         font-size: 18px;
     }
 
 
-    #about{
+    #about {
         flex-direction: column;
         justify-content: center;
         width: 90%;
         margin: 30px 10px 30px 10px;
         margin-left: auto;
         margin-right: auto;
-        /* padding-left: 30px; */
     }
 
-    #about #image-wrapper{
+    #about #image-wrapper {
         width: 100%;
         margin: 0;
         margin-bottom: 50px;
     }
 
-    #about #about-content{
+    #about #about-content {
         width: 100%;
     }
 
-    #fun-fact{
+    #fun-fact {
         flex-direction: column;
         margin-left: 30px;
         margin-right: 30px;
@@ -1242,134 +1270,157 @@ footer .section-button:hover {
     }
 
 
-    .fun-fact-wrapper{
+    .fun-fact-wrapper {
         width: 100%;
         padding-right: 20px;
     }
 
 
     /* PROJECTS */
-
     #project-items-section {
         box-sizing: border-box;
         padding-left: 20px;
     }
 
     #team-title,
-    #projects-title,#testimonials {
+    #projects-title,
+    #testimonials {
         padding: 0;
         flex-direction: column;
     }
 
     #projects-title {
         margin-left: 20px;
+        margin-bottom: 60px;
+    }
+
+    #projects-title .section-top-title{
+        font-size: 30px;
     }
 
     .project-list {
-        padding: 10px 30px 0px 10px;
-        width: 100%;
+        padding: 0px;
+        margin: 0px;
+        margin-bottom: 20px;
+        width: 90%;
     }
 
-    .project-list .hover-text {
-        display: none;
-    }
 
+    #project-items-section{
+        padding: 0px;
+    }
 
     #orange-section {
         box-sizing: border-box;
         padding: 18px;
         width: 100%;
         text-align: left;
-        background-size: auto,cover;
+        background-size: auto, cover;
         background-position: 0px 0px, 50% 50%;
-        background-attachment:scroll, fixed;
+        background-attachment: scroll, fixed;
 
     }
 
-    #orange-section .section-top-title{
+    #orange-section .section-top-title {
         padding-right: 10px;
         font-size: 24px;
         line-height: 1.2;
         margin: 10px 0px;
     }
 
-    #orange-section .paragraph-content{
+    #orange-section .paragraph-content {
         margin-top: 4px;
         font-size: 20px;
         line-height: 1.2;
     }
 
-    #orange-section .section-button{
+    #orange-section .section-button {
         font-size: 12px;
         margin: 20px 0 0 0px;
     }
 
 
     /* TEAM */
-
-    #team{
+    #team {
         margin: 0px;
-        padding:2% 0 20px 20px;
+        padding-bottom: 0px;
+        /* padding: 2% 0 20px 20px; */
     }
 
-    #team-title .section-top-title,#testimonials .section-top-title
-    {
+    #team-title .section-top-title,
+    #testimonials .section-top-title {
         margin-top: 8px;
         letter-spacing: 0.8px;
         font-size: 24px;
         line-height: 1.2;
     }
 
+    #team-title .section-top-title{
+        margin-bottom: 10px;
+    }
+
+    #team-title {
+        padding-left: 20px;
+        margin-top: 30px;
+        margin-bottom: 40px;
+        /* line-height: 40px; */
+    }
 
     #team-title .section-button,
-    #testimonials .section-button{
+    #testimonials .section-button {
         padding-top: 0;
         letter-spacing: 0.8px;
         margin-top: 0;
         font-size: 12px;
     }
 
-    .profile-wrapper{
-        width: 100%;
+    .profile-wrapper {
+        width: 90%;
         margin-left: 0px;
         margin-right: 0px;
+        margin-bottom: 30px;
     }
 
 
     /* Testimonials */
 
-    #testimonials{
+    #testimonials {
         flex-direction: column;
         padding-left: 0;
-        /* margin-right: 0;
-        margin-left: 0; */
         padding-bottom: 50px;
+        /* margin: 0px; */
+        width: 55%;
+        box-sizing: border-box;
+        /* margin-left: 0px;
+        margin-right: 0px; */
     }
 
 
-    #testimonials-content{
+    #testimonials-content {
+        width: 140%;
         padding-left: 5px;
         padding-right: 0px;
         margin-right: 0;
+        margin-right: 50px;
+        margin-bottom: 50px;
         align-items: center;
 
     }
 
-    #testimonials-content .paragraph-content{
+    #testimonials-content .paragraph-content {
         margin: 25px 0px 20px 0px;
         font-size: 18px;
         line-height: normal;
-        padding-bottom: 50px;
+        padding-bottom: 0px;
+
     }
 
-    #testimonials-content .section-button{
+    #testimonials-content .section-button {
         letter-spacing: normal;
         font-weight: 700;
     }
 
-    .client-card-wrapper{
-        /* margin-right: auto;
-        margin-left: 30px; */
+    .client-card-wrapper {
         align-items: center;
         width: 150%;
     }
@@ -1378,86 +1429,101 @@ footer .section-button:hover {
 
 
     /* BLOG */
-
-
-    #blog{
+    #blog {
         padding-top: 0px;
 
     }
 
-    #blog-title{
+    #blog-title {
         flex-direction: column;
+        padding-left: 20px;
+        padding-right: 50px;
+        align-items: flex-start;
     }
 
-    #blog-card{
+    #blog-title .section-top-title{
+        font-size: 30px;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+
+    }
+
+    #blog-card {
         padding-bottom: 2%;
-        flex-direction: column; 
+        flex-direction: column;
         align-items: center;
     }
 
-    #companies-logo{
+    .content-card h2{
+        font-size: 18px;
+        font-weight: 600;
+        letter-spacing: 1px;
+    }
+
+    #companies-logo {
         margin-top: 5%;
         flex-direction: column;
         text-align: center;
-        min-height: 450px;
-        padding:0px;
+        min-height: 600px;
+        padding: 0px;
+        padding-top: 40px;
         padding-bottom: 35px;
     }
 
-    #companies-logo h1{
+    /* #companies-logo h1 {
         display: block;
         margin: 15px 0px;
         justify-content: space-around;
+    } */
+
+    #companies-logo img{
+        width: 90px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
-    #image-card{
+    #image-card {
         line-height: normal;
         box-sizing: border-box;
         margin-bottom: 0;
         padding-bottom: 0;
     }
 
-    #image-card img{
-        height:50%;
+    #image-card img {
+        height: 50%;
     }
 
 
-    #companies-logo p{
+    #companies-logo p {
         font-size: 15px;
         margin: 0px;
         margin-top: 15px;
     }
 
 
-    .blog-wrapper{
+    .blog-wrapper {
         width: 160%;
-        /* margin: 0px; */
         margin-bottom: 20px;
-    
+
     }
 
 
 
     /* FOOTER */
 
-    footer{
-        /* margin: 0px; */
+    footer {
         align-items: center;
-        width: 90%;
-        padding-left: 30px;
+        box-sizing: border-box;
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 0px;
         padding-bottom: 60px;
-        /* background-color: yellowgreen; */
-
     }
 
-    #footer-content{
+    #footer-content {
         flex-direction: column;
-        /* width: 250%; */
         padding: 0px;
         padding-top: 30px;
-        /* background-color: turquoise; */
-        /* padding: 0px;
-        margin: 0px; */
     }
 
     #footer-content .info-wrapper {
@@ -1466,71 +1532,71 @@ footer .section-button:hover {
         padding-left: 20px;
     }
 
-    /* .info-wrapper .horizontal-line{
-        width: 30%;
-    } */
-
 
     #footer-content .info-wrapper h1 {
         margin-bottom: 15px;
-        
+
     }
 
-    #footer-content .info-wrapper>p{
+    #footer-content .info-wrapper>p {
         line-height: 1.1;
         font-size: 18px;
     }
-    footer .section-button{
+
+
+
+    footer .section-button {
         font-size: 12px;
-        margin-bottom: 0px;
+        margin-bottom: 10px;
         margin-top: 0px;
         height: 24px;
     }
 
-    .info-title h1::after{
+    .info-title{
+        margin: 0px;
+        /* color: red; */
+    }
+
+    .info-title h1::after {
         top: 48%;
-        /* right: 0%; */
         left: 60%;
-        width: 60%;
+        width: 100%;
         border-top-width: 1px;
     }
 
-    #footer-content>:nth-child(3) :nth-child(1){
+    #footer-content>:nth-child(3) :nth-child(1) {
         font-size: 14px;
     }
 
-    /* #phone-number>:nth-child(2) :nth-child(1){
-        margin-bottom: 0px;
-        color: red;
-    } */
 
-    #footer-content :nth-child(3):nth-child(n+1) :nth-child(1){
+    #footer-content :nth-child(3):nth-child(n+1) :nth-child(1) {
         margin-bottom: 0px;
-        /* color: blue; */
     }
 
 
 
-    #phone-number{
+    #phone-number {
         margin-top: 20px;
     }
 
-    .details-info :nth-child(2){
+    .details-info :nth-child(2) {
         font-size: 16px;
         margin-top: 10px;
         color: #919196;
     }
+    .wrapper-3{
+        margin-bottom: 30px;
+    }
 
 
-
-    #footer-logo{
+    #footer-logo {
         height: 40px;
-        left: 50px;
-        bottom: 25px;
+        left: 35px;
+        bottom: 12px;
         background-color: red;
     }
 
-    #footer-logo .nuuk-logo{
-    padding: 16px 24px;
+    #footer-logo .nuuk-logo {
+        padding: 16px 24px;
     }
 }
